fixing some minor issues and removing stale code
