# backend/src/api/api/openapi/mod.rs
@@ -1,15 +1,14 @@
 use utoipa::OpenApi;
 
-use crate::lib::models::{Room, events::RoomInfo, schemas::{RoomInfoResponse, ConsumerParameters, TransportOptions, RtpCapabilitiesWrapper, IceCandidateSchema}};
+use crate::lib::models::{Room, events::RoomInfo, schemas::{ConsumerParameters, TransportOptions, RtpCapabilitiesWrapper, IceCandidateSchema}};
 
 #[derive(OpenApi)]
 #[openapi(
     paths(
         crate::api::api::rooms::list_rooms,
-        crate::api::api::rooms::get_room_info,
     ),
     components(
-        schemas(Room, RoomInfo, RoomInfoResponse, 
+        schemas(Room, RoomInfo, 
                 ConsumerParameters, TransportOptions, RtpCapabilitiesWrapper, IceCandidateSchema)
     ),
     tags(
